--- a/package.json
+++ b/package.json
@@ -4,32 +4,26 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^16.11.35",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
-    "chart.js": "^3.7.1",
-    "firebase": "^9.8.3",
-    "react": "^18.1.0",
-    "react-chartjs-2": "^4.1.0",
-    "react-dom": "^18.1.0",
-    "react-icons": "^4.3.1",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
+    "chart.js": "^4.4.2",
+    "firebase": "^10.8.1",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^8.0.1",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.5",
-    "typescript": "^4.6.4",
+    "react-router-dom": "^6.22.2",
+    "styled-components": "^6.1.8",
+    "typescript": "^5.3.3",
     "uniqid": "^5.4.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -50,7 +44,9 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.25",
-    "@types/uniqid": "^5.3.2"
+    "@types/styled-components": "^5.1.34",
+    "@types/uniqid": "^5.3.4",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.1.4"
   }
 }
