--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-router-dom": "^6.22.2",
     "styled-components": "^6.1.8",
     "typescript": "^5.3.3",
-    "uniqid": "^5.4.0",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
@@ -27,8 +26,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -45,7 +43,6 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.34",
-    "@types/uniqid": "^5.3.4",
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.1.4"
   }
